fix: improve input icon spacing

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -520,7 +520,7 @@ fieldset {
 	i {
 		position: absolute;
 		top: 14px;
-		left: 14px;
+		left: 13px;
 		font-size: 12px;
 		color: #989898;
 	}
